vbnc/vbnc/tests/Errors/30132.vb
  Public Class Application
    Public Shared Sub Main()
        GoTo Foo
    End Sub
End Class